feat(field): added formating options on fields (#377)
- create field service & field controller
- move field files in a specific package
- fix POST and create update endpoint field
- make properties private in FieldDto

close #303